Made cards split into cols of 2 on md screens and below. Changed styling for consistent borders & text, and made the presenter and location left aligned. Fixed the activator button not actually activating the card.

--- a/user-registration-app/src/app/views/live-view/live-view.component.css
+++ b/user-registration-app/src/app/views/live-view/live-view.component.css
@@ -322,9 +322,14 @@ td {
 }
 
 .workshop-track{
-  font-family: "Raleway", sans-serif;
-  font-size: larger;
+  font-family: "Cornerstone", sans-serif;
+  font-size: 1.75em;
   font-weight: bold;
+  background-color: #e5704c;
+  border: 5px solid #e5704c;
+  border-width: 9px 20px 5px 20px;
+  border-radius: 10px;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
 }
 
 .nopadding {
@@ -336,29 +341,27 @@ td {
 }
 
 .beginner {
-  background: #D0EAF1;
-  border-color: #D0EAF1;
-  color: #000000;
+  background: #6FA7B3;
+  border-color: #6FA7B3;
   vertical-align:middle;
 }
 
 .intermediate {
-  background: #6FA7B3;
-  border-color: #6FA7B3;
-  color: #000000;
+  background: #1D5B7C;
+  border-color: #1D5B7C;
   vertical-align:middle;
 }
 
 .advanced {
-  background: #1D5B7C;
-  border-color: #1D5B7C;
+  background: #15425f;
+  border-color: #15425f;
   vertical-align:middle;
   color: #ffffff;
 }
 
 .sponsored {
-  background: #15425f;
-  border-color: #15425f;
+  background: #103247;
+  border-color: #103247;
   vertical-align:middle;
   color: #ffffff;
 }
@@ -463,6 +466,10 @@ footer {
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
+.card .card-reveal {
+  border-radius: 10px;
+}
+
 .card-image {
   max-height: 100% !important;
 }
@@ -485,6 +492,14 @@ footer {
   max-width: 500px;
 }
 
+.card-content div:nth-of-type(1) {
+  padding-top: 10px;
+}
+
+.card-content div {
+  text-align: left;
+}
+
 .card .card-content .card-title {
   margin-bottom: 0px;
   line-height: 1em;
@@ -494,7 +509,8 @@ footer {
   color: black;
 }
 
-.card-image {
+.activator {
+  cursor: pointer;
 }
 
 .tabs .tab a {
